# CutSave

./: .gitignore  CHANGELOG.md  PrintNest.spec  README.md  VERSAO.txt  build.bat  clean.bat  printnest_main.py  pyproject.toml  requirements.txt
.claude/agents/: qa-tester.md
DOCUMENTAÇÃO/: DESIGN.md  ESTADO-2026-06-24.md  ESTADO-2026-06-29.md  GUIA-DO-CODIGO.md  README_BUILD.txt  ROADMAP.md
PrintNest_Build/: VERSAO.txt
app/: __main__.py
app/application/: footprint.py  positioning.py  project_io.py
app/infrastructure/: pdf_boxes.py
app/presentation/: __main__.py  icons.py  main_window.py  measurements.py  messages.py  single_instance.py  theme.py  units.py
app/shared/: resources.py
app/tools/: nesting_preview.py  pdf_discovery.py
assets/: make_icon.py
assets/icons/: LICENSE.txt
corel/: GUIA-CLIENTE.md  PrintNest.bas  README.md  run_printnest_dev.bat
docs/: ARQUITETURA.md  README.md  ROADMAP.md  SESSAO-2026-06-22-FACA-COMPARTILHADA-E-MARCAS.md
docs/especificacoes/: FACA-CONTORNO-SPEC.md
docs/historico/: ESTADO-2026-06-23.md  ESTADO-2026-06-24.md  ESTADO-2026-06-25.md  ESTADO-2026-06-30.md
docs/produto/: PLANO-COMERCIALIZACAO.md  ROADMAP.md
scripts/: benchmark.py
tests/: conftest.py  synth_images.py  test_boot.py  test_build_packaging.py  test_logging.py  test_paths.py  test_settings.py
tests/application/: test_export_dxf_use_case.py  test_export_print_pdf.py  test_footprint.py  test_generate_rectangular_cut.py  test_generate_vector_cut.py  test_import_image.py  test_import_pdf_use_case.py  test_pdf_report.py  test_positioning.py  (+3 more)
(+102 files in other folders)
