[project]
name = "printnest"
version = "0.1.0"
description = "Software de preparacao de producao grafica: faca, nesting e exportacao PDF/DXF."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
